Fix test and add documentation + ERR_UNCAUGHT_EXCEPTION